--- a/src/_includes/_layouts/secondary.njk
+++ b/src/_includes/_layouts/secondary.njk
@@ -1,9 +1,9 @@
 {# 
   Secondary Layout
 
-  Project: Baythium Packer
   File: /src/_includes/_layouts/secondary.njk
-  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+  Project: Baythium Packer Client
+  Organization: Baythium Ecosystem: https://baythium.com
 #}
 
 {% extends "base.njk" %}
