--- a/src/contact.njk
+++ b/src/contact.njk
@@ -14,21 +14,22 @@
 {# 
   Contact
 
-  Project: Baythium Packer
   File: /src/contact.njk
-  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+  Project: Baythium Packer Client
+  Organization: Baythium Ecosystem: https://baythium.com
 #}
 
-<!-- Contact Page -->
-<section class="section-1 contact">
+<!-- Section -->
+<section class="section contact">
 
-  <div class="card-1">
-    <div class="card-1__body">
+  <!-- Card -->
+  <div class="card">
+    <div class="card__body">
 
       <!-- Headline -->
-      <div class="headline-1 headline-1--xl">
-        <h1 class="headline-1__title">{{ title }}</h1>
-        <p class="headline-1__description"></p>
+      <div class="headline headline--xl">
+        <h1 class="headline__title">{{ title }}</h1>
+        <p class="headline__description"></p>
       </div>
 
       <h4>Bug Fixes</h4>
