--- a/src/docs/index.njk
+++ b/src/docs/index.njk
@@ -11,24 +11,26 @@
 }
 ---
 
-{# 
+{#
   Documentation
 
-  Project: Baythium Packer
-  File: /src/documentation.njk
-  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+  File: /src/docs/index.njk
+  Project: Baythium Packer Client
+  Organization: Baythium Ecosystem: https://baythium.com
+
+  @see: https://www.cloudflare.com/apps/developer/docs/techniques/scripts
 #}
 
 <!-- Documentation Page -->
-<section class="section-1 documentation">
+<section class="section documentation">
 
-  <div class="card-1">
-    <div class="card-1__body">
+  <div class="card">
+    <div class="card__body">
 
       <!-- Headline -->
-      <div class="headline-1 headline-1--xl">
-        <h1 class="headline-1__title">Getting Started</h1>
-        <p class="headline-1__description"></p>
+      <div class="headline headline--xl">
+        <h1 class="headline__title">Getting Started</h1>
+        <p class="headline__description"></p>
       </div>
       
       {% highlight "javascript" %}
