--- a/src/exceptions/403.njk
+++ b/src/exceptions/403.njk
@@ -9,9 +9,9 @@
 {# 
   403 - Forbidden
 
-  Project: Baythium Packer
   File: /src/exceptions/403.njk
-  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+  Project: Baythium Packer
+  Organization: Baythium Ecosystem: https://baythium.com
 #}
 
 <h1>{{ title }}</h1>
