--- a/src/exceptions/405.njk
+++ b/src/exceptions/405.njk
@@ -9,9 +9,9 @@
 {# 
   405 - Method Not Allowed
 
-  Project: Baythium Packer
   File: /src/exceptions/405.njk
-  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+  Project: Baythium Packer Client
+  Organization: Baythium Ecosystem: https://baythium.com
 #}
 
 <h1>{{ title }}</h1>
