--- a/src/exceptions/malicious-request.njk
+++ b/src/exceptions/malicious-request.njk
@@ -9,12 +9,12 @@
 {# 
   Malicious Request
 
-  Project: Baythium Packer
   File: /src/exceptions/malicious-request.njk
-  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+  Project: Baythium Packer
+  Organization: Baythium Ecosystem: https://baythium.com
 #}
 
-<section class="section-1 malicious-request">
+<section class="section malicious-request">
 
   <h1>Malicious Request</h1>
   <p>This request has been blocked by Anti XSS and SQL Injection</p>
