--- a/src/robots.txt.njk
+++ b/src/robots.txt.njk
@@ -4,10 +4,16 @@
   eleventyExcludeFromCollections: true
 }
 ---
-{# 
-  The current file is very important when you want to disallow search engines from scraping some URLs in the application
+{#
+  Robots
 
-  @see: http://www.robotstxt.org/robotstxt.html 
+  File: /src/robots.txt.njk
+  Project: Baythium Packer Client
+  Organization: Baythium Ecosystem: https://baythium.com
+
+  The current file is very important when you want to disallow search engines from scraping some URLs in the application.
+
+  @see: http://www.robotstxt.org/robotstxt.html
 #}
 User-agent: *
 Disallow: /images/
