--- a/src/styles/components/gdpr.scss
+++ b/src/styles/components/gdpr.scss
@@ -1,1 +1,7 @@
-
+/**
+ * GDPR
+ *
+ * File: /src/scss/components/gdpr.scss
+ * Project: Baythium Packer Client
+ * Organization: Baythium Ecosystem: https://baythium.com
+ */
