--- a/src/styles/components/syntax-highlight.scss
+++ b/src/styles/components/syntax-highlight.scss
@@ -1,3 +1,11 @@
+/**
+ * Syntax Highlight
+ *
+ * File: /src/scss/components/syntax-highlight.scss
+ * Project: Baythium Packer Client
+ * Organization: Baythium Ecosystem: https://baythium.com
+ */
+
 .highlight-line {
   display: inline-block;
 
