--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -1,9 +1,9 @@
 {# 
   Head Partial
 
-  Project: Baythium Packer
   File: /src/_includes/_partials/head.njk
-  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+  Project: Baythium Packer Client
+  Organization: Baythium Ecosystem: https://baythium.com
 #}
 
 <head>
