--- a/src/contribution.njk
+++ b/src/contribution.njk
@@ -14,28 +14,31 @@
 {# 
   Contribution
 
-  Project: Baythium Packer
   File: /src/contribution.njk
-  Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+  Project: Baythium Packer Client
+  Organization: Baythium Ecosystem: https://baythium.com
 #}
 
-<!-- Contribution Page -->
-<section class="section-1 contribution">
+<!-- Section -->
+<section class="section contribution">
 
-  <div class="card-1">
-    <div class="card-1__body">
+  <!-- Card -->
+  <div class="card">
+    <div class="card__body">
 
       <!-- Headline -->
-      <div class="headline-1 headline-1--xl">
-        <h1 class="headline-1__title">{{ title }}</h1>
-        <p class="headline-1__description"></p>
+      <div class="headline headline--xl">
+        <h1 class="headline__title">{{ title }}</h1>
+        <p class="headline__description"></p>
       </div>
 
-      <p>All appropriate code contributions including those of people having commit access <b>MUST</b> go through a pull request and be approved by a core developer before being merged. This allows us to ensure proper review of all the code.</p>
-      <p>So, fork the project, create a feature branch and send us a pull request.</p>
-
-      <p>In any case, we appreciate any assistance because without you and the open source community this project <b>WOULD NOT</b> be possible.</p>
-      <p>Before you get started, please familiarize yourself with the project and its demanding standards.</p>
+      <!-- Content -->
+      <div class="contribution__content">
+        <p>All appropriate code contributions including those of people having commit access <b>MUST</b> go through a pull request and be approved by a core developer before being merged. This allows us to ensure proper review of all the code.</p>
+        <p>So, fork the project, create a feature branch and send us a pull request.</p>
+        <p>In any case, we appreciate any assistance because without you and the open source community this project <b>WOULD NOT</b> be possible.</p>
+        <p>Before you get started, please familiarize yourself with the project and its demanding standards.</p>
+      </div>
 
     </div>
   </div>
