--- a/src/patch-notes/2020-01-15/index.njk
+++ b/src/patch-notes/2020-01-15/index.njk
@@ -12,26 +12,28 @@
 }
 ---
 
-<section class="section-1">
-  <div class="row-1">
+<!-- Section -->
+<section class="section">
+  <div class="row">
     <!-- Deck 1 -->
-    <div class="sm-column-1--4">
+    <div class="column__sm--4">
       {% include "_partials/patch-note.njk" %}
     </div>
 
     <!-- Deck 2 -->
-    <div class="sm-column-1--8">
+    <div class="column__sm--8">
 
-      <div class="card-1">
-        <div class="card-1__body">
+      <!-- Card -->
+      <div class="card">
+        <div class="card__body">
 
           <!-- Headline -->
-          <div class="headline-1">
-            <h1>{{ title }}</h1>
-            <p>{{ date | humanReadableFormat }}</p>
+          <div class="headline">
+            <h1 class="headline__title">{{ title }}</h1>
+            <p class="headline__description">{{ date | humanReadableFormat }}</p>
           </div>
 
-          <!-- Table of contents -->
+          <!-- Table of Contents -->
           <div class="table-of-content">
             <h2 class="table-of-content__title">Table of Contents</h2>
             
@@ -48,7 +50,7 @@
             </ul>
           </div>
 
-          <!-- Content -->
+          <!-- Article Content -->
           <article>
             <h2 id="content-1">Pellentesque non egestas nunc</h2>
             <p>Nulla nec est metus. Quisque eu volutpat ex, id sagittis lectus. Integer malesuada mauris eget ligula feugiat semper. Fusce tincidunt vehicula ante. Suspendisse accumsan sagittis risus sed ultrices. Curabitur at ultrices mauris, tincidunt semper turpis. Mauris dapibus diam sit amet tempus vestibulum.</p>
