--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -1,291 +1,301 @@
 /**
  * Color
  *
- * Project: Baythium Aspectus
  * File: /src/styles/variables/color.scss
- * Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+ * Project: Baythium Aspectus
+ * Organization: Baythium Ecosystem: https://baythium.com
+ *
+ * RULES:
+ * 1. You HAVE TO follow the "BEM" naming conventions for each global variable you use
  *
  * References:
  * 1. https://material-ui.com/customization/color
  */
 
-$white: #ffffff !default;
-$black: #000000 !default;
- 
+$color--white: #ffffff !default;
+$color--black: #000000 !default;
+$color--transparent: transparent !default;
+
 /* GREY PALETTE */
-$gray-100: #f5f5f5 !default;
-$gray-200: #eeeeee !default;
-$gray-300: #e0e0e0 !default;
-$gray-400: #bdbdbd !default;
-$gray-500: #9e9e9e !default;
-$gray-600: #757575 !default;
-$gray-700: #616161 !default;
-$gray-800: #424242 !default;
-$gray-900: #212121 !default;
- 
-$grays: () !default;
- 
+$color--gray-100: #f5f5f5 !default;
+$color--gray-200: #eeeeee !default;
+$color--gray-300: #e0e0e0 !default;
+$color--gray-400: #bdbdbd !default;
+$color--gray-500: #9e9e9e !default;
+$color--gray-600: #757575 !default;
+$color--gray-700: #616161 !default;
+$color--gray-800: #424242 !default;
+$color--gray-900: #212121 !default;
+
+$color__gray-palette: () !default;
+
 // stylelint-disable-next-line scss/dollar-variable-default
-$grays: map-merge(
+$color__gray-palette: map-merge(
   (
-    "100": $gray-100,
-    "200": $gray-200,
-    "300": $gray-300,
-    "400": $gray-400,
-    "500": $gray-500,
-    "600": $gray-600,
-    "700": $gray-700,
-    "800": $gray-800,
-    "900": $gray-900
+    "100": $color--gray-100,
+    "200": $color--gray-200,
+    "300": $color--gray-300,
+    "400": $color--gray-400,
+    "500": $color--gray-500,
+    "600": $color--gray-600,
+    "700": $color--gray-700,
+    "800": $color--gray-800,
+    "900": $color--gray-900
   ),
-  $grays
+  $color__gray-palette
 );
 
 /* RED PALETTE */
-$red-100: #ffcdd2 !default;
-$red-200: #ef9a9a !default;
-$red-300: #e57373 !default;
-$red-400: #ef5350 !default;
-$red-500: #f44336 !default;
-$red-600: #e53935 !default;
-$red-700: #d32f2f !default;
-$red-800: #c62828 !default;
-$red-900: #b71c1c !default;
+$color--red-100: #ffcdd2 !default;
+$color--red-200: #ef9a9a !default;
+$color--red-300: #e57373 !default;
+$color--red-400: #ef5350 !default;
+$color--red-500: #f44336 !default;
+$color--red-600: #e53935 !default;
+$color--red-700: #d32f2f !default;
+$color--red-800: #c62828 !default;
+$color--red-900: #b71c1c !default;
 
 /* PINK PALETTE */
-$pink-100: #f8bbd0 !default;
-$pink-200: #f48fb1 !default;
-$pink-300: #f06292 !default;
-$pink-400: #ec407a !default;
-$pink-500: #e91e63 !default;
-$pink-600: #d81b60 !default;
-$pink-700: #c2185b !default;
-$pink-800: #ad1457 !default;
-$pink-900: #880e4f !default;
+$color--pink-100: #f8bbd0 !default;
+$color--pink-200: #f48fb1 !default;
+$color--pink-300: #f06292 !default;
+$color--pink-400: #ec407a !default;
+$color--pink-500: #e91e63 !default;
+$color--pink-600: #d81b60 !default;
+$color--pink-700: #c2185b !default;
+$color--pink-800: #ad1457 !default;
+$color--pink-900: #880e4f !default;
 
 /* PURPLE PALETTE */
-$purple-100: #e1bee7 !default;
-$purple-200: #ce93d8 !default;
-$purple-300: #ba68c8 !default;
-$purple-400: #ab47bc !default;
-$purple-500: #9c27b0 !default;
-$purple-600: #8e24aa !default;
-$purple-700: #7b1fa2 !default;
-$purple-800: #6a1b9a !default;
-$purple-900: #4a148c !default;
+$color--purple-100: #e1bee7 !default;
+$color--purple-200: #ce93d8 !default;
+$color--purple-300: #ba68c8 !default;
+$color--purple-400: #ab47bc !default;
+$color--purple-500: #9c27b0 !default;
+$color--purple-600: #8e24aa !default;
+$color--purple-700: #7b1fa2 !default;
+$color--purple-800: #6a1b9a !default;
+$color--purple-900: #4a148c !default;
 
 /* DEEP PURPLE PALETTE */
-$deep-purple-100: #d1c4e9 !default;
-$deep-purple-200: #b39ddb !default;
-$deep-purple-300: #9575cd !default;
-$deep-purple-400: #7e57c2 !default;
-$deep-purple-500: #673ab7 !default;
-$deep-purple-600: #5e35b1 !default;
-$deep-purple-700: #512da8 !default;
-$deep-purple-800: #4527a0 !default;
-$deep-purple-900: #311b92 !default;
+$color--deep-purple-100: #d1c4e9 !default;
+$color--deep-purple-200: #b39ddb !default;
+$color--deep-purple-300: #9575cd !default;
+$color--deep-purple-400: #7e57c2 !default;
+$color--deep-purple-500: #673ab7 !default;
+$color--deep-purple-600: #5e35b1 !default;
+$color--deep-purple-700: #512da8 !default;
+$color--deep-purple-800: #4527a0 !default;
+$color--deep-purple-900: #311b92 !default;
 
 /* INDIGO PALETTE */
-$indigo-100: #c5cae9 !default;
-$indigo-200: #9fa8da !default;
-$indigo-300: #7986cb !default;
-$indigo-400: #5c6bc0 !default;
-$indigo-500: #3f51b5 !default;
-$indigo-600: #3949ab !default;
-$indigo-700: #303f9f !default;
-$indigo-800: #283593 !default;
-$indigo-900: #1a237e !default;
+$color--indigo-100: #c5cae9 !default;
+$color--indigo-200: #9fa8da !default;
+$color--indigo-300: #7986cb !default;
+$color--indigo-400: #5c6bc0 !default;
+$color--indigo-500: #3f51b5 !default;
+$color--indigo-600: #3949ab !default;
+$color--indigo-700: #303f9f !default;
+$color--indigo-800: #283593 !default;
+$color--indigo-900: #1a237e !default;
 
 /* BLUE PALETTE */
-$blue-100: #bbdefb !default;
-$blue-200: #90caf9 !default;
-$blue-300: #64b5f6 !default;
-$blue-400: #42a5f5 !default;
-$blue-500: #2196f3 !default;
-$blue-600: #1e88e5 !default;
-$blue-700: #1976d2 !default;
-$blue-800: #1565c0 !default;
-$blue-900: #0d47a1 !default;
+$color--blue-100: #bbdefb !default;
+$color--blue-200: #90caf9 !default;
+$color--blue-300: #64b5f6 !default;
+$color--blue-400: #42a5f5 !default;
+$color--blue-500: #2196f3 !default;
+$color--blue-600: #1e88e5 !default;
+$color--blue-700: #1976d2 !default;
+$color--blue-800: #1565c0 !default;
+$color--blue-900: #0d47a1 !default;
 
 /* LIGHT BLUE PALETTE */
-$light-blue-100: #b3e5fc !default;
-$light-blue-200: #81d4fa !default;
-$light-blue-300: #4fc3f7 !default;
-$light-blue-400: #29b6f6 !default;
-$light-blue-500: #03a9f4 !default;
-$light-blue-600: #039be5 !default;
-$light-blue-700: #0288d1 !default;
-$light-blue-800: #0277bd !default;
-$light-blue-900: #01579b !default;
+$color--light-blue-100: #b3e5fc !default;
+$color--light-blue-200: #81d4fa !default;
+$color--light-blue-300: #4fc3f7 !default;
+$color--light-blue-400: #29b6f6 !default;
+$color--light-blue-500: #03a9f4 !default;
+$color--light-blue-600: #039be5 !default;
+$color--light-blue-700: #0288d1 !default;
+$color--light-blue-800: #0277bd !default;
+$color--light-blue-900: #01579b !default;
 
 /* CYAN PALETTE */
-$cyan-100: #b2ebf2 !default;
-$cyan-200: #80deea !default;
-$cyan-300: #4dd0e1 !default;
-$cyan-400: #26c6da !default;
-$cyan-500: #00bcd4 !default;
-$cyan-600: #00acc1 !default;
-$cyan-700: #0097a7 !default;
-$cyan-800: #00838f !default;
-$cyan-900: #006064 !default;
+$color--cyan-100: #b2ebf2 !default;
+$color--cyan-200: #80deea !default;
+$color--cyan-300: #4dd0e1 !default;
+$color--cyan-400: #26c6da !default;
+$color--cyan-500: #00bcd4 !default;
+$color--cyan-600: #00acc1 !default;
+$color--cyan-700: #0097a7 !default;
+$color--cyan-800: #00838f !default;
+$color--cyan-900: #006064 !default;
 
 /* TEAL PALETTE */
-$teal-100: #b2dfdb !default;
-$teal-200: #80cbc4 !default;
-$teal-300: #4db6ac !default;
-$teal-400: #26a69a !default;
-$teal-500: #009688 !default;
-$teal-600: #00897b !default;
-$teal-700: #00796b !default;
-$teal-800: #00695c !default;
-$teal-900: #004d40 !default;
+$color--teal-100: #b2dfdb !default;
+$color--teal-200: #80cbc4 !default;
+$color--teal-300: #4db6ac !default;
+$color--teal-400: #26a69a !default;
+$color--teal-500: #009688 !default;
+$color--teal-600: #00897b !default;
+$color--teal-700: #00796b !default;
+$color--teal-800: #00695c !default;
+$color--teal-900: #004d40 !default;
 
 /* GREEN PALETTE */
-$green-100: #c8e6c9 !default;
-$green-200: #a5d6a7 !default;
-$green-300: #81c784 !default;
-$green-400: #66bb6a !default;
-$green-500: #4caf50 !default;
-$green-600: #43a047 !default;
-$green-700: #388e3c !default;
-$green-800: #2e7d32 !default;
-$green-900: #1b5e20 !default;
+$color--green-100: #c8e6c9 !default;
+$color--green-200: #a5d6a7 !default;
+$color--green-300: #81c784 !default;
+$color--green-400: #66bb6a !default;
+$color--green-500: #4caf50 !default;
+$color--green-600: #43a047 !default;
+$color--green-700: #388e3c !default;
+$color--green-800: #2e7d32 !default;
+$color--green-900: #1b5e20 !default;
 
 /* LIGHT GREEN PALETTE */
-$light-green-100: #dcedc8 !default;
-$light-green-200: #c5e1a5 !default;
-$light-green-300: #aed581 !default;
-$light-green-400: #9ccc65 !default;
-$light-green-500: #8bc34a !default;
-$light-green-600: #7cb342 !default;
-$light-green-700: #689f38 !default;
-$light-green-800: #558b2f !default;
-$light-green-900: #33691e !default;
+$color--light-green-100: #dcedc8 !default;
+$color--light-green-200: #c5e1a5 !default;
+$color--light-green-300: #aed581 !default;
+$color--light-green-400: #9ccc65 !default;
+$color--light-green-500: #8bc34a !default;
+$color--light-green-600: #7cb342 !default;
+$color--light-green-700: #689f38 !default;
+$color--light-green-800: #558b2f !default;
+$color--light-green-900: #33691e !default;
 
 /* LIME PALETTE */
-$lime-100: #f0f4c3 !default;
-$lime-200: #e6ee9c !default;
-$lime-300: #dce775 !default;
-$lime-400: #d4e157 !default;
-$lime-500: #cddc39 !default;
-$lime-600: #c0ca33 !default;
-$lime-700: #afb42b !default;
-$lime-800: #9e9d24 !default;
-$lime-900: #827717 !default;
+$color--lime-100: #f0f4c3 !default;
+$color--lime-200: #e6ee9c !default;
+$color--lime-300: #dce775 !default;
+$color--lime-400: #d4e157 !default;
+$color--lime-500: #cddc39 !default;
+$color--lime-600: #c0ca33 !default;
+$color--lime-700: #afb42b !default;
+$color--lime-800: #9e9d24 !default;
+$color--lime-900: #827717 !default;
 
 /* YELLOW PALETTE */
-$yellow-100: #fff9c4 !default;
-$yellow-200: #fff59d !default;
-$yellow-300: #fff176 !default;
-$yellow-400: #ffee58 !default;
-$yellow-500: #ffeb3b !default;
-$yellow-600: #fdd835 !default;
-$yellow-700: #fbc02d !default;
-$yellow-800: #f9a825 !default;
-$yellow-900: #f57f17 !default;
+$color--yellow-100: #fff9c4 !default;
+$color--yellow-200: #fff59d !default;
+$color--yellow-300: #fff176 !default;
+$color--yellow-400: #ffee58 !default;
+$color--yellow-500: #ffeb3b !default;
+$color--yellow-600: #fdd835 !default;
+$color--yellow-700: #fbc02d !default;
+$color--yellow-800: #f9a825 !default;
+$color--yellow-900: #f57f17 !default;
 
 /* AMBER PALETTE */
-$amber-100: #ffecb3 !default;
-$amber-200: #ffe082 !default;
-$amber-300: #ffd54f !default;
-$amber-400: #ffca28 !default;
-$amber-500: #ffc107 !default;
-$amber-600: #ffb300 !default;
-$amber-700: #ffa000 !default;
-$amber-800: #ff8f00 !default;
-$amber-900: #ff6f00 !default;
+$color--amber-100: #ffecb3 !default;
+$color--amber-200: #ffe082 !default;
+$color--amber-300: #ffd54f !default;
+$color--amber-400: #ffca28 !default;
+$color--amber-500: #ffc107 !default;
+$color--amber-600: #ffb300 !default;
+$color--amber-700: #ffa000 !default;
+$color--amber-800: #ff8f00 !default;
+$color--amber-900: #ff6f00 !default;
 
 /* ORANGE PALETTE */
-$orange-100: #ffe0b2 !default;
-$orange-200: #ffcc80 !default;
-$orange-300: #ffb74d !default;
-$orange-400: #ffa726 !default;
-$orange-500: #ff9800 !default;
-$orange-600: #fb8c00 !default;
-$orange-700: #f57c00 !default;
-$orange-800: #ef6c00 !default;
-$orange-900: #e65100 !default;
+$color--orange-100: #ffe0b2 !default;
+$color--orange-200: #ffcc80 !default;
+$color--orange-300: #ffb74d !default;
+$color--orange-400: #ffa726 !default;
+$color--orange-500: #ff9800 !default;
+$color--orange-600: #fb8c00 !default;
+$color--orange-700: #f57c00 !default;
+$color--orange-800: #ef6c00 !default;
+$color--orange-900: #e65100 !default;
 
 /* DEEP ORANGE PALETTE */
-$deep-orange-100: #ffccbc !default;
-$deep-orange-200: #ffab91 !default;
-$deep-orange-300: #ff8a65 !default;
-$deep-orange-400: #ff7043 !default;
-$deep-orange-500: #ff5722 !default;
-$deep-orange-600: #f4511e !default;
-$deep-orange-700: #e64a19 !default;
-$deep-orange-800: #d84315 !default;
-$deep-orange-900: #bf360c !default;
+$color--deep-orange-100: #ffccbc !default;
+$color--deep-orange-200: #ffab91 !default;
+$color--deep-orange-300: #ff8a65 !default;
+$color--deep-orange-400: #ff7043 !default;
+$color--deep-orange-500: #ff5722 !default;
+$color--deep-orange-600: #f4511e !default;
+$color--deep-orange-700: #e64a19 !default;
+$color--deep-orange-800: #d84315 !default;
+$color--deep-orange-900: #bf360c !default;
 
 /* BROWN PALETTE */
-$brown-100: #d7ccc8 !default;
-$brown-200: #bcaaa4 !default;
-$brown-300: #a1887f !default;
-$brown-400: #8d6e63 !default;
-$brown-500: #795548 !default;
-$brown-600: #6d4c41 !default;
-$brown-700: #5d4037 !default;
-$brown-800: #4e342e !default;
-$brown-900: #3e2723 !default;
+$color--brown-100: #d7ccc8 !default;
+$color--brown-200: #bcaaa4 !default;
+$color--brown-300: #a1887f !default;
+$color--brown-400: #8d6e63 !default;
+$color--brown-500: #795548 !default;
+$color--brown-600: #6d4c41 !default;
+$color--brown-700: #5d4037 !default;
+$color--brown-800: #4e342e !default;
+$color--brown-900: #3e2723 !default;
 
 /* BLUE GREY PALETTE */
-$blue-grey-100: #cfd8dc !default;
-$lue-grey-200: #b0bec5 !default;
-$lue-grey-300: #90a4ae !default;
-$lue-grey-400: #78909c !default;
-$lue-grey-500: #607d8b !default;
-$lue-grey-600: #546e7a !default;
-$lue-grey-700: #455a64 !default;
-$lue-grey-800: #37474f !default;
-$lue-grey-900: #263238 !default;
+$color--blue-grey-100: #cfd8dc !default;
+$color--blue-grey-200: #b0bec5 !default;
+$color--blue-grey-300: #90a4ae !default;
+$color--blue-grey-400: #78909c !default;
+$color--blue-grey-500: #607d8b !default;
+$color--blue-grey-600: #546e7a !default;
+$color--blue-grey-700: #455a64 !default;
+$color--blue-grey-800: #37474f !default;
+$color--blue-grey-900: #263238 !default;
 
 /* DEFAULT PALETTE */
-$blue: #1976d2 !default;
-$indigo: #303f9f !default;
-$purple: #6f42c1 !default;
-$pink: #e83e8c !default;
-$red: #e53935 !default;
-$orange: #f4511e !default;
-$yellow: #ffeb3b !default;
-$green: #43a047 !default;
-$teal: #00897b !default;
-$cyan: #00bcd4 !default;
-$brown: #795548 !default;
-$deepOrange: #ff5722 !default;
-$blueGrey: #607d8b !default;
-$lightGreen: #8bc34a !default;
-$lime: #cddc39 !default;
- 
-/**
- * May be unique in many ways depending on an organization brand colors
- */
-$primary: #3A1F5D !default;
-$secondary: #C83660 !default;
-$alternative: #F6D365 !default;
- 
-$success: $green !default;
-$info: $teal !default;
-$warning: $yellow !default;
-$danger: $red !default;
- 
-$light: $gray-200 !default;
-$dark: $gray-800 !default;
- 
-$theme-colors: () !default;
- 
-$theme-colors: map-merge(
+$color--blue: $color--blue-500 !default;
+$color--indigo: $color--indigo-500 !default;
+$color--purple: $color--purple-500 !default;
+$color--pink: $color--pink-500 !default;
+$color--red: $color--red-500 !default;
+$color--orange: $color--orange-500 !default;
+$color--yellow: $color--yellow-500 !default;
+$color--green: $color--green-500 !default;
+$color--teal: $color--teal-500 !default;
+$color--cyan: $color--cyan-500 !default;
+$color--brown: $color--brown-500 !default;
+$color--deep-orange: $color--deep-orange-500 !default;
+$color--blue-grey: $color--blue-grey-500 !default;
+$color--light-green: $color--light-green-500 !default;
+$color--lime: $color--lime-500 !default;
+
+/* May be unique in many ways depending on an organization brand colors */
+$color--primary: #3a1f5d !default;
+$color--secondary: #c83660 !default;
+$color--alternative: #f6d365 !default;
+
+$color--success: #5cb85c !default;
+$color--info: #5bc0de !default;
+$color--warning: #f0ad4e !default;
+$color--danger: #d9534f !default;
+
+$color--light: $color--gray-200 !default;
+$color--dark: $color--gray-800 !default;
+
+/* LIGHT PALETTE */
+$color__light-palette: () !default;
+
+$color__light-palette: map-merge(
   (
-    "primary":    $primary,
-    "secondary":  $secondary,
-    "alternative": $alternative,
- 
-    "success":    $success,
-    "info":       $info,
-    "warning":    $warning,
-    "danger":     $danger,
- 
-    "light":      $light,
-    "dark":       $dark
+    "primary": $color--primary,
+    "secondary": $color--secondary,
+    "alternative": $color--alternative,
+
+    "success": $color--success,
+    "info": $color--info,
+    "warning": $color--warning,
+    "danger": $color--danger,
+
+    "light": $color--light,
+    "dark": $color--dark
   ),
-  $theme-colors
+  $color__light-palette
 );
+
+/* 
+ * DARK PALETTE
+ *
+ * WARNING: In the decision-making process...
+ */
+$color__dark-palette: () !default;
